# Rosetta-Nuclear-Spinner

./: .gitignore  CLAUDE.md  DEPLOYMENT_SUMMARY.md  FILE_LISTING.md  Makefile  PHYSICS_KNOWLEDGE_BASE.md  Python Training Orchestrator.txt  README.md  RESEARCH_FINDINGS.md  VERIFICATION_REPORT_V3.md  best_model_config.json  best_model_weights.npz  brain.py  comprehensive_sweep.json  heart.py  pyproject.toml  v3_sweep_results.json
.github/workflows/: compile-latex.yml  helix-walkthrough.yml  js-tests.yml  nightly-helix-measure.yml  python-tests.yml  unified-nightly-training.yml
Cybernetics Nuclear Spinner/: Makefile  Nuclear Spinner Firmware and Hardware.txt  comm_protocol.c  physics_constants.h  waiting for claude but more NS.txt
archive/Cybernetics Nuclear Spinner/: CYBERNETIC_INTEGRATION_FRAMEWORK.md  Nuclear Spinner.txt  README (2).md  hal_hardware.c  please hold more cybernetics incoming i thin idk.txt  rotor_control.c
archive/sort/: INTEGRATION_GUIDE.md  Nuclear Spinner Neurology.txt  Nuclear_Spinner_Unified_Specification.md  README (3).md  comm_protocol.h  deployment_result.json  extended_physics_constants.py  gates_summary.json  hal_hardware.h  neural_interface.c  physics.py  pulse_control.h  requirements.txt  spinner_bridge.py  spinner_client.py  threshold_logic.c  (+2 more)
bridge/: __init__.py  crystal_nucleation_analysis.py  grid_cell_plates.py  kuramoto_neural.py  lightning_quasicrystal.py  phase_transition_training.py  post_critical_dynamics.py  serial_protocol.py  spinner_bridge.py  unified_state_bridge.py
configs/: nightly.yaml
docs/: HARDWARE_SPEC_LIGHTNING_QUASICRYSTAL.md  INTEGRATION_GUIDE.md
nuclear_spinner_firmware/: CHANGELOG.md  Makefile  README.md  training_modules.h
runs/: extended_physics_results.json  full_depth_results.json  physics_math_results.json  pr_body.md  promotion.json  workflow_result.json
scripts/: analyze_session.py  run_experiment.py  run_extended_physics.py  run_physics_math.py  start_system.sh  verify_physics.py
sort/: North Star History.txt  Nuclear Spinner Roadmap.txt  deploy_unified.py  full_depth_results.json  model_promotion.json  module_results.json  neural_interface.h  nuclear_spinner_explanation.md  pulse_control.c  test_extended_physics.py  training_modules.c
src/: extended_physics_constants.py  physics_constants.py
tests/: test_integration.py  test_serial_protocol.py  test_system.py
training/: __init__.py
training_artifacts/: em_dynamics_reflection.md  full_depth_results.json  grid_cell_states.json  learned_patterns.json  polarity_distribution.json  post_critical_dynamics.json
(+138 files in other folders)
